--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slider{
+  position: relative;
+  height:100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 0;
+  
 }
-
-.App-link {
-  color: #61dafb;
+.image{
+  width:100%;
+  height:100%;
+  border-radius: 10px;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prev{
+  position: absolute;
+  top: 50%;
+  font-size: 3rem;
+  left: 30px;
+  cursor: pointer;
+}
+.next{
+  position: absolute;
+  top: 50%;
+  font-size: 3rem;
+  right: 30px;
+  cursor: pointer;
+}
+.slide{
+  opacity: 0;
+  transition-duration:1s ease ;
+}
+.slide.active{
+  opacity:1;
+  transition-duration: 1s;
+  transform: scale(1.08);
 }
